I have all the remaining minor layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,26 +24,7 @@
   }
 }
 
-/* line 19, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/utilities/_extends.scss */
-.intro2 {
-  margin-top: 160px;
-}
-
-@media (min-width: 993px) {
-  /* line 19, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/utilities/_extends.scss */
-  .intro2 {
-    margin-top: 0px;
-  }
-}
-
-@media (min-width: 1200px) {
-  /* line 19, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/utilities/_extends.scss */
-  .intro2 {
-    margin-top: 0px;
-  }
-}
-
-/* line 32, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/utilities/_extends.scss */
+/* line 20, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/utilities/_extends.scss */
 .grid, #code-examples, .space, form, .contact-info, .contact-msg {
   margin-left: 5%;
   margin-right: 5%;
@@ -250,7 +231,7 @@ header, body, #sticky-menu {
 }
 
 @media (min-width: 1200px) {
-  /* line 31, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/base/_background.scss */
+  /* line 27, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/base/_background.scss */
   #contact {
     height: 100vw;
     padding-top: 20px;
@@ -421,9 +402,30 @@ img {
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-around;
-  width: 50%;
+  justify-content: flex-start;
   height: 100%;
+}
+
+@media (min-width: 576px) {
+  /* line 56, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/layout/_header.scss */
+  #sticky-2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  /* line 56, ../../../OneDrive/Documents/GitHub/Portfolio-ChristopherMorriss/scss/layout/_header.scss */
+  #sticky-2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
 }
 
 @media (min-width: 993px) {
@@ -436,6 +438,11 @@ img {
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 4px solid #00FFFF;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
   }
 }
 
@@ -449,6 +456,11 @@ img {
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 4px solid #00FFFF;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
   }
 }
 
