--- a/scss/base/_background.scss
+++ b/scss/base/_background.scss
@@ -20,10 +20,6 @@
     @extend %margin-menu;
 }
 
-.intro2{
-    //margin-top:160px;
-    @extend %margin-menu2;
-}
 
 
 
