--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -61,8 +61,26 @@
             $flex-direction:column,
             $flex-wrap:nowrap,
             $flex-align:center,
-            $flex-justify:space-around,
+            $flex-justify:flex-start,
             );
+    @include media(small){
+        @include flex(
+            $flex-display:flex,
+            $flex-direction:row,
+            $flex-wrap:nowrap,
+            $flex-align:center,
+            $flex-justify:flex-start,
+            );
+    }
+    @include media (medium){
+        @include flex(
+            $flex-display:flex,
+            $flex-direction:row,
+            $flex-wrap:nowrap,
+            $flex-align:center,
+            $flex-justify:flex-start,
+            );
+    }
     @include media(large){
         border-left:none;
         border-right:none;
@@ -71,7 +89,14 @@
         padding-top: 20px;
         padding-bottom: 20px;
         border-bottom:4px solid $aqua_blue;
-        }
+        @include flex(
+            $flex-display:flex,
+            $flex-direction:column,
+            $flex-wrap:nowrap,
+            $flex-align:center,
+            $flex-justify:space-around,
+            );
+    }
     @include media(x-large){
         border-left:none;
         border-right:none;
@@ -80,8 +105,16 @@
         padding-top: 20px;
         padding-bottom: 20px;
         border-bottom:4px solid $aqua_blue;
+        @include flex(
+            $flex-display:flex,
+            $flex-direction:column,
+            $flex-wrap:nowrap,
+            $flex-align:center,
+            $flex-justify:space-around,
+            );
     }
     @extend %center;
-    width:50%;
+    //width:50%;
+    
     height: 100%;
 }
